# aio-agentic-sdlc

./: .agentic-backlog.json  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  README.md  TASKS_FOR_NEXT_AGENT.md  backlog.json  backlog.md  backlog_archived.json  backlog_legacy.json  intention-dag.yaml  migrate_workspace.py  package-lock.json  package.json  pyproject.toml  queue.md  reality-dag.yaml  refactor.py  release-please-config.json  tag_codebase.py  test_symlink_attack
.agent/: global_memory.md
.agents/: global_memory.md
.agents/plugins/: marketplace.json
.agents/rules/: dag_integrity.md  markdown.md  vcs_standards.md
.agents/workflows/: sdlc-pipeline.md
.aio-agentic-sdlc/: reality-dag.yaml
.aio-agentic-sdlc/archive/: commercial-licensing-prd.md  parallel-task-execution-prd.md  qa-swarm-orchestration-prd.md  researcher-integration-prd.md  tui-dashboard-prd.md
.aio-agentic-sdlc/doc/: VISION.md  architecture.md
.aio-agentic-sdlc/inbox/: unified-dotfolder-workspace-prd.md
.aio-agentic-sdlc/research-spikes/: multi-language-treesitter.md
.aio-agentic-sdlc/specs/: dag-tooling.md  intention-dag-schema.md  reality-dag-generator.md  subagent-output-templates.md
.codex/agents/: sdlc_architect.toml  sdlc_cartographer.toml  sdlc_devops.toml  sdlc_implementer.toml  sdlc_intake.toml  sdlc_linter.toml  sdlc_orchestrator.toml  sdlc_qa.toml  sdlc_researcher.toml  sdlc_scribe.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml  release.yml
archive/: deprecate-external-trackers-prd.md  full-traceability-guid-node-ids-prd.md  mcp-first-architecture-prd.md  operational-modes-prd.md  universal-artifact-templating-prd.md
doc/: VISION.md  architecture.md  codex-plugin.md  research_agent_customization.md
doc/adr/: 0001-versioned-local-state.md  0002-intent-ir-v1.md
inbox/: agent-format-migration-prd.md  agent-personas-prd.md  automated_prd_archival_prd.md  canonical-guid-traceability-prd.md  daemon-mode-prd.md  intake-deduplication-prd.md  monetization-infrastructure-prd.md  native-dynamic-sdd-workflow-prd.md  stack-agnostic-rdag-prd.md  subagent-output-templates-prd.md  telemetry-prd.md  test_no_fields.md  version-flag-prd.md
plugins/aio-agentic-sdlc/: .mcp.json
specs/: canonical-guid-traceability.md  implicit-rollup.md  sdlc-orchestrator.md  stack-agnostic-rdag-sdd.md  two-stage-pipeline.md  ux-layer.md
specs/bootstrapping-legacy-reingestion/: prd.md
src/agentic_backlog/: cli.py  config.py  core.py  dag_cli.py  dag_manager.py  dag_models.py  detect.py  diffing_engine.py  github.py  github_core.py  mcp_server.py  orchestrator_loop.py  reality_dag_generator.py
src/aio_agentic_sdlc/: archiver.py  cli.py  config.py  core.py  dag_cli.py  dag_manager.py  dag_models.py  detect.py  diffing_engine.py  github.py  github_core.py  intent_ir.py  intent_store.py  mcp_server.py  orchestrator_loop.py  reality_dag_generator.py  semantic_dedup.py  state.py  templating_engine.py
src/utils/: markdown_parser.py
templates/: prd-template.md  research-spike-template.md
test_archiver_scratch/: intention-dag.yaml
tests/: test_adversarial.py  test_archiver.py  test_blockers.py  test_cli.py  test_codex_plugin.py  test_dag_cli.py  test_dag_manager.py  test_detect.py  test_diffing_engine.py  test_functional_bug.py  test_guid_extractor_adversarial.py  test_guid_validation_adversarial.py  test_intake_adversarial.py  test_intake_agent.py  test_intent_ir.py  test_intent_mutation.py  test_local_authority.py  test_markdown_parser.py  test_markdown_parser_adversarial.py  test_markdown_parser_encoding_adversarial.py  test_mcp_adversarial.py  test_mcp_server.py  test_migrate_ids_adversarial.py  test_next.py  test_orchestrator_loop.py  test_prioritize.py  test_reality_generator.py  test_security.py  test_security_adversarial.py  test_state_integrity.py  test_status.py  test_templating_engine.py  test_toctou_adversarial.py
(+60 files in other folders)
