[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agentic-backlog"
dynamic = ["version"]
description = "Deterministic 3D Matrix Backlog Manager for Agentic Workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [
  { name="aegolius-labs" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.28.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "google-antigravity",
]

[project.urls]
"Homepage" = "https://github.com/aegolius-labs/agentic-backlog-cli"
"Bug Tracker" = "https://github.com/aegolius-labs/agentic-backlog-cli/issues"

[dependency-groups]
dev = ["pytest>=9.1.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
agentic-backlog = "agentic_backlog.cli:main"
agb = "agentic_backlog.cli:main"
agentic-backlog-mcp = "agentic_backlog.mcp_server:main"
dag-tool = "agentic_backlog.dag_cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
