[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aio-agentic-sdlc"
dynamic = ["version"]
description = "Deterministic 3D Matrix Backlog Manager for Agentic Workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm Noncommercial License 1.0.0" }
authors = [
  { name="aegolius-labs" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "filelock>=3.18.0",
    "mcp>=1.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "google-antigravity",
    "jinja2>=3.1.6",
    "sentence-transformers>=5.6.1",
    "sqlite-vec>=0.1.9",
    "numpy>=2.2.6",
]

[project.urls]
"Homepage" = "https://github.com/aegolius-labs/aio-agentic-sdlc"
"Bug Tracker" = "https://github.com/aegolius-labs/aio-agentic-sdlc/issues"

[dependency-groups]
dev = ["pytest>=9.1.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
aio-agentic-sdlc = "aio_agentic_sdlc.cli:main"
agb = "aio_agentic_sdlc.cli:main"
aio-agentic-sdlc-mcp = "aio_agentic_sdlc.mcp_server:main"
dag-tool = "aio_agentic_sdlc.dag_cli:cli"
aio-sdlc = "aio_agentic_sdlc.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
